--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,13 +17,17 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="368.0" prefWidth="324.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="326.0" mnemonicParsing="false" onAction="#SaveInInventory" text="Put in inventory" />
-                        <TextField fx:id="FirstTextField" layoutX="139.0" layoutY="23.0" />
-                        <TextField fx:id="SecondTextField" layoutX="139.0" layoutY="78.0" />
-                        <TextField fx:id="ThirdTextField" layoutX="139.0" layoutY="132.0" />
-                        <Label layoutX="9.0" layoutY="28.0" text="Type of weapon" />
-                        <Label layoutX="9.0" layoutY="83.0" text="Name of the weapon" />
-                        <Label layoutX="10.0" layoutY="137.0" text="Weapon Damage" />
+                        <Button layoutX="14.0" layoutY="326.0" mnemonicParsing="false" onAction="#saveInInventory" text="Beregn profit" />
+                        <TextField fx:id="NavnTextField" layoutX="102.0" layoutY="23.0" />
+                        <TextField fx:id="KobsPrisTextField" layoutX="102.0" layoutY="78.0" />
+                        <TextField fx:id="AntalTextField" layoutX="102.0" layoutY="170.0" prefHeight="27.0" prefWidth="43.0" />
+                        <Label layoutX="9.0" layoutY="28.0" text="Navn på spiller" />
+                        <Label layoutX="9.0" layoutY="83.0" text="Købs pris" />
+                        <Label layoutX="14.0" layoutY="175.0" text="Antal" />
+                        <TextField fx:id="SalgsPrisTextField" layoutX="102.0" layoutY="130.0" />
+                        <Label layoutX="11.0" layoutY="135.0" text="Salgs pris" />
+                        <TextField fx:id="ProfitTextField" layoutX="130.0" layoutY="279.0" prefHeight="27.0" prefWidth="126.0" />
+                        <Label layoutX="13.0" layoutY="284.0" text="Total  profit efter tax" />
                      </children>
                   </AnchorPane>
             </content>
@@ -32,9 +36,8 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TextArea fx:id="FirstTextArea" layoutX="14.0" layoutY="14.0" prefHeight="339.0" prefWidth="71.0" />
-                        <TextArea fx:id="SecondTextArea" layoutX="91.0" layoutY="15.0" prefHeight="340.0" prefWidth="192.0" />
-                        <TextArea fx:id="ThirdTextArea" layoutX="300.0" layoutY="15.0" prefHeight="339.0" prefWidth="48.0" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="252.0" AnchorPane.topAnchor="15.0" />
+                        <TextArea fx:id="FirstTextArea" layoutX="14.0" layoutY="14.0" prefHeight="339.0" prefWidth="217.0" />
+                        <Button layoutX="239.0" layoutY="14.0" mnemonicParsing="false" onAction="#clearInventory" text="Clear" />
                      </children>
                   </AnchorPane>
             </content>
