--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,14 +17,14 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="368.0" prefWidth="324.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="326.0" mnemonicParsing="false" onAction="#saveInInventory" text="Beregn profit" />
+                        <Button layoutX="14.0" layoutY="326.0" mnemonicParsing="false" onAction="#beregnProfit" text="Beregn profit" />
                         <TextField fx:id="NavnTextField" layoutX="102.0" layoutY="23.0" />
-                        <TextField fx:id="KobsPrisTextField" layoutX="102.0" layoutY="78.0" />
-                        <TextField fx:id="AntalTextField" layoutX="102.0" layoutY="170.0" prefHeight="27.0" prefWidth="43.0" />
+                        <TextField fx:id="KobsPrisTextField" layoutX="102.0" layoutY="78.0" text="1000" />
+                        <TextField fx:id="AntalTextField" layoutX="102.0" layoutY="170.0" prefHeight="27.0" prefWidth="43.0" text="1" />
                         <Label layoutX="9.0" layoutY="28.0" text="Navn på spiller" />
                         <Label layoutX="9.0" layoutY="83.0" text="Købs pris" />
                         <Label layoutX="14.0" layoutY="175.0" text="Antal" />
-                        <TextField fx:id="SalgsPrisTextField" layoutX="102.0" layoutY="130.0" />
+                        <TextField fx:id="SalgsPrisTextField" layoutX="102.0" layoutY="130.0" text="1000" />
                         <Label layoutX="11.0" layoutY="135.0" text="Salgs pris" />
                         <TextField fx:id="ProfitTextField" layoutX="130.0" layoutY="279.0" prefHeight="27.0" prefWidth="126.0" />
                         <Label layoutX="13.0" layoutY="284.0" text="Total  profit efter tax" />
