--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -9,35 +9,37 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="442.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <TabPane layoutX="-2.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane layoutX="-2.0" prefHeight="452.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Front">
+          <Tab text="Claculator">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="368.0" prefWidth="324.0">
                      <children>
                         <Button layoutX="14.0" layoutY="326.0" mnemonicParsing="false" onAction="#beregnProfit" text="Beregn profit" />
                         <TextField fx:id="NavnTextField" layoutX="102.0" layoutY="23.0" />
-                        <TextField fx:id="KobsPrisTextField" layoutX="102.0" layoutY="78.0" text="1000" />
-                        <TextField fx:id="AntalTextField" layoutX="102.0" layoutY="170.0" prefHeight="27.0" prefWidth="43.0" text="1" />
+                        <TextField fx:id="KobsPrisTextField" layoutX="102.0" layoutY="78.0" promptText="f.eks 1000" />
+                        <TextField fx:id="AntalTextField" layoutX="102.0" layoutY="170.0" prefHeight="27.0" prefWidth="60.0" promptText="f.eks 10" />
                         <Label layoutX="9.0" layoutY="28.0" text="Navn på spiller" />
                         <Label layoutX="9.0" layoutY="83.0" text="Købs pris" />
                         <Label layoutX="14.0" layoutY="175.0" text="Antal" />
-                        <TextField fx:id="SalgsPrisTextField" layoutX="102.0" layoutY="130.0" text="1000" />
+                        <TextField fx:id="SalgsPrisTextField" layoutX="102.0" layoutY="130.0" promptText="f.eks 2000" />
                         <Label layoutX="11.0" layoutY="135.0" text="Salgs pris" />
                         <TextField fx:id="ProfitTextField" layoutX="130.0" layoutY="279.0" prefHeight="27.0" prefWidth="126.0" />
-                        <Label layoutX="13.0" layoutY="284.0" text="Total  profit efter tax" />
+                        <Label layoutX="13.0" layoutY="284.0" text="Profit efter tax" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Inventory">
+          <Tab text="log">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="381.0" prefWidth="595.0">
                      <children>
-                        <TextArea fx:id="FirstTextArea" layoutX="14.0" layoutY="14.0" prefHeight="339.0" prefWidth="217.0" />
-                        <Button layoutX="239.0" layoutY="14.0" mnemonicParsing="false" onAction="#clearInventory" text="Clear" />
+                        <TextArea fx:id="log" layoutX="14.0" layoutY="14.0" prefHeight="339.0" prefWidth="217.0" />
+                        <Button layoutX="239.0" layoutY="14.0" mnemonicParsing="false" onAction="#clearLog" text="Clear" />
+                        <TextField fx:id="TOTALPROFIT" layoutX="87.0" layoutY="365.0" prefHeight="27.0" prefWidth="144.0" />
+                        <Label layoutX="14.0" layoutY="370.0" text="Total profit" />
                      </children>
                   </AnchorPane>
             </content>
