--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -34,12 +34,14 @@
           </Tab>
           <Tab text="log">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="381.0" prefWidth="595.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="439.0" prefWidth="600.0">
                      <children>
                         <TextArea fx:id="log" layoutX="14.0" layoutY="14.0" prefHeight="339.0" prefWidth="217.0" />
                         <Button layoutX="239.0" layoutY="14.0" mnemonicParsing="false" onAction="#clearLog" text="Clear" />
                         <TextField fx:id="TOTALPROFIT" layoutX="87.0" layoutY="365.0" prefHeight="27.0" prefWidth="144.0" />
                         <Label layoutX="14.0" layoutY="370.0" text="Total profit" />
+                        <Button layoutX="87.0" layoutY="392.0" mnemonicParsing="false" onAction="#save" text="Save" />
+                        <Button layoutX="185.0" layoutY="392.0" mnemonicParsing="false" text="Load" />
                      </children>
                   </AnchorPane>
             </content>
