--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -41,7 +41,7 @@
                         <TextField fx:id="TOTALPROFIT" layoutX="87.0" layoutY="365.0" prefHeight="27.0" prefWidth="144.0" />
                         <Label layoutX="14.0" layoutY="370.0" text="Total profit" />
                         <Button layoutX="87.0" layoutY="392.0" mnemonicParsing="false" onAction="#save" text="Save" />
-                        <Button layoutX="185.0" layoutY="392.0" mnemonicParsing="false" text="Load" />
+                        <Button layoutX="185.0" layoutY="392.0" mnemonicParsing="false" onAction="#load" text="Load" />
                      </children>
                   </AnchorPane>
             </content>
